--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -58,11 +58,11 @@
                 <header class="avatar">
                         <img id="imgProfil" src="https://s3.amazonaws.com/uifaces/faces/twitter/kolage/128.jpg" />
                         <h2>John D.</h2>
-                </header>                
+                </header>
         <ul>
             <li><a href="Accueil">Accueil</a></li>
             <li><a href="vos-trajets">Vos trajets</a></li>
-            <li><a href="votre-meteo">Votre météo</a></li>
+            <li><a href="meteo/">Votre météo</a></li>
             <li><a href="votre-playlist-Spotify">Vos playlist Spotify</a></li>
             <li><a href="vos-articles">Vos articles</a></li>
             <li><a href="vos-visites">Vos visites</a></li>
@@ -81,7 +81,10 @@
 
     <!-- Morris Charts JavaScript -->
     <script type="text/javascript" src='/components/raphael/raphael.min.js'></script>
-    <script type="text/javascript" src='/components/morrisjs/morris.min.js'></script>
+    <script type="text/javascript" src='/components/morris.js/morris.min.js'></script>
+
+    <!-- Socket io -->
+    <script type="text/javascript" src="/components/socket.io-client/dist/socket.io.js"></script>
 
     <!-- Custom Theme JavaScript -->
     <script type="text/javascript" src='/js/sb-admin-2.js'></script>
@@ -93,21 +96,15 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCrvc135P6W5lV0mNykc7S4-1IOWzCCjac&callback=initMap"
     async defer></script>
 
-    <script type="text/javascript">  
+    <script type="text/javascript">
         var socket = io.connect('http://localhost:8080/');
-        console.log(socket);
-        socket.on('connect', function(data) {
-            socket.emit('join', 'Hello World from client');
-
+        socket.on('error', function (error) {
+            console.log("Server return error :" + error);
         });
-        socket.on('messages', function(data) {
-                alert(data);
-        });
-
 
         var options = {
           enableHighAccuracy: true,
-          timeout: 3000,
+          timeout: 5000,
           maximumAge: 0
         };
 
@@ -120,13 +117,17 @@
           console.log(`More or less ${crd.accuracy} meters.`);
 
           socket.emit('localization', {lat: crd.latitude, lon: crd.longitude});
+          socket.on('dataMeteo', function (data) {
+            console.log(data);
+          })
         };
 
         function error(err) {
+          socket.emit('localization', {err: `ERROR(${err.code}): ${err.message}` });
           console.warn(`ERROR(${err.code}): ${err.message}`);
         };
 
-        window.navigator.geolocation.watchPosition(success, error, options);
+        window.navigator.geolocation.getCurrentPosition(success, error, options);
     </script>
 
 </body>
