--- a/views/login.ejs
+++ b/views/login.ejs
@@ -13,26 +13,26 @@
 
     <h1 class='titreLogo'> Pimp My road </h1>
         <div class="wrapper">
-          <form class="connexion-form-signin" action="/users/login" method="POST">       
+          <form class="connexion-form-signin" action="/users/login" method="POST">
             <h2 class="connexion-form-signin-heading">Connexion</h2>
-              <input type="text" class="form-control" name="username" placeholder="Adresse mail ou identifiant" required="" autofocus="" />
-              <input type="password" class="form-control" name="password" placeholder="Mots de passe" required=""/>      
+              <input type="text" class="form-control" name="_username" placeholder="Adresse mail ou identifiant" required="" autofocus="" />
+              <input type="password" class="form-control" name="_password" placeholder="Mots de passe" required=""/>
               <label class="connexion-checkbox">
                 <input type="checkbox" value="remember-me" id="connexionrememberMe" name="rememberMe"> Se souvenir de moi
               </label>
-              <button class="btn btn-lg btn-primary btn-block" type="submit">Envoyer</button>   
+              <button class="btn btn-lg btn-primary btn-block" type="submit">Envoyer</button>
               <a class='lienCreationCompte' href="/creationCompte" target="_blank"> Inscription </a>
           </form>
-          
+
         </div>
-        
+
   </body>
 </html>
 
 
- 
 
-  
+
+
 
 
 
