--- a/views/playlistSpotify.ejs
+++ b/views/playlistSpotify.ejs
@@ -48,7 +48,18 @@
                             </table>
         </div>
         <!-- /#page-wrapper -->
+        <form action="/spotify/playlists" method="POST" role="form">
+            <legend>Form title</legend>
 
+            <div class="form-group">
+                <label for="">Nom playlist : </label>
+                <input type="text" class="form-control" id="name" name="name" placeholder="Nom playlist">
+            </div>
+
+
+
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
     </div>
     <!-- /#wrapper -->
 
