--- a/views/meteo.ejs
+++ b/views/meteo.ejs
@@ -12,3 +12,45 @@
             
 </div>
 </div>
+
+
+
+    <script type="text/javascript">
+        var socket = io.connect('http://127.0.0.1:8080/');
+        socket.on('error', function (error) {
+            console.log("Server return error :" + error);
+        });
+
+        var options = {
+          enableHighAccuracy: true,
+          timeout: 5000,
+          maximumAge: 0
+        };
+
+        function success(pos) {
+          var crd = pos.coords;
+
+          console.log('Your current position is:');
+          console.log(`Latitude : ${crd.latitude}`);
+          console.log(`Longitude: ${crd.longitude}`);
+          console.log(`More or less ${crd.accuracy} meters.`);
+
+          socket.emit('localization', {lat: crd.latitude, lon: crd.longitude});
+          socket.on('dataMeteo', function (data) {
+            console.log(data);
+          })
+        };
+
+        function error(err) {
+          socket.emit('localization', {err: `ERROR(${err.code}): ${err.message}` });
+          console.warn(`ERROR(${err.code}): ${err.message}`);
+        };
+
+
+		if ("geolocation" in navigator) {
+		  /* géolocalisation possible */
+    		navigator.geolocation.getCurrentPosition(success, error, options);
+		} else {
+		  alert("Le service de géolocalisation n'est pas disponible sur votre ordinateur.");
+		}
+    </script>
