--- a/views/dashboardAccueil.ejs
+++ b/views/dashboardAccueil.ejs
@@ -99,7 +99,8 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-6">
+            <div class="row">
+                <div class="col-lg-3 col-md-6">
                     <div class="panel panel-primary">
                         <div class="panel-heading">
                             <div class="row">
@@ -120,6 +121,8 @@
                             </div>
                         </a>
                     </div>
+                </div>
+            </div>
             <!-- /.row -->
     </div>
     <!-- /#wrapper -->
